--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/06.02.Examples.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/06.02.Examples.yml
@@ -183,8 +183,7 @@ notes:
       ![](CET-06.02-06.Xm.1.jpg)
       </p>
     Annotations: ''
-  tags:
-  - Editing
+  tags: []
 - id: 1577575513858
   media:
   - path: ${file_dir}/images/CET-06.02-07.Xm.1.jpg
