--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/06.04.Exercises.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/06.04.Exercises.yml
@@ -22,5 +22,4 @@ notes:
       (a) The work done by the gorilla in lifting its weight of $360 \text{ pounds}$ to a height of $20 \text{ feet}$ is $W=F d=(360 \text{ lb})(20 \text{ ft})=7200 \text{ ft-lb}.$ 
       (b) The amount of time it takes the gorilla to climb the tree doesn't change the amount of work done, so the work done is still $7200 \text{ft-lb}$.
     Annotations: ''
-  tags:
-  - Editing
+  tags: []
