--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/11.02.Examples.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/11.02.Examples.yml
@@ -12,7 +12,7 @@ defaults:
   markdownTabLength: 2
   stringTemplDelim: ¢
 notes:
-- id: 1578347065594
+- id: 1578436376897
   fields:
     Front: |
       CET-11.02-01 Example:
@@ -26,5 +26,213 @@ notes:
       \sum_{n=1}^{\infty} a_{n}=\lim _{n \rightarrow \infty} s_{n}=\lim _{n \rightarrow \infty} \frac{2 n}{3 n+5}=\lim _{n \rightarrow \infty} \frac{2}{3+\frac{5}{n}}=\frac{2}{3}
       $$
     Annotations: ''
-  tags:
-  - Editing
+  tags: []
+- id: 1578436377152
+  media:
+  - path: ¢{file_dir}/images/CET-11.02-03.Xm.1.jpg
+  fields:
+    Front: |
+      CET-11.02-03 Example:
+      Find the sum of the geometric series
+      $$
+      5-\frac{10}{3}+\frac{20}{9}-\frac{40}{27}+\cdots
+      $$
+    Back: |
+      The first term is $a=5$ and the common ratio is $r=-\frac{2}{3} .$ since $|r|=\frac{2}{3}<1,$ the series is convergent by ( 4) and its sum is
+      $$
+      5-\frac{10}{3}+\frac{20}{9}-\frac{40}{27}+\cdots=\frac{5}{1-\left(-\frac{2}{3}\right)}=\frac{5}{\frac{5}{3}}=3
+      $$
+
+      What do we really mean when we say that the sum of the series in is $3 ?$ Of course, we can't literally add an infinite number of terms, one by one. But, according to the definition the total sum is the limit of the sequence of partial sums. So, by taking the sum of sufficiently many terms, we can get as close as we like to the number 3 . The table shows the first ten partial sums $s_{n}$ and the graph shows how the sequence of partial sums approaches 3.
+      $$
+      \begin{array}{|r|r|}
+      \hline n & {s_{n}} \\
+      \hline 1 & {5.000000} \\
+      {2} & {1.666667} \\
+      {3} & {3.666667} \\
+      {4} & {2.407407} \\
+      {5} & {3.395062} \\
+      {7} & {3.175583} \\
+      {7} & {3.175583} \\
+      {8} & {2.878037} \\
+      {9} & {3.078037} \\
+      {10} & {2.947975} \\
+      \hline
+      \end{array}
+      $$
+      <p align="center">
+      ![](CET-11.02-03.Xm.1.jpg)
+      </p>
+    Annotations: ''
+  tags: []
+- id: 1578436377525
+  fields:
+    Front: |
+      CET-11.02-04 Example:
+      Is the series $\sum_{n=1}^{n} 2^{2 n} 3^{1-n}$ convergent or divergent?
+    Back: |
+      Let's rewrite the $n$ th term of the series in the form $a r^{n-1}$ :
+      $$
+      \sum_{n=1}^{\infty} 2^{2 n} 3^{1-n}=\sum_{n=1}^{\infty}\left(2^{2}\right)^{n} 3^{-(n-1)}=\sum_{n=1}^{\infty} \frac{4^{n}}{3^{n-1}}=\sum_{n=1}^{\infty} 4\left(\frac{4}{3}\right)^{n-1}
+      $$ We recognize this series as a geometric series with $a=4$ and $r=\frac{4}{3} .$ since $r>1,$ the series diverges.
+
+      Another way to identify $a$ and $r$ is to write out the first few terms:
+      $$
+      4+\frac{16}{3}+\frac{64}{9}+\cdots
+      $$
+    Annotations: ''
+  tags: []
+- id: 1578436377815
+  fields:
+    Front: |
+      CET-11.02-05 Example:
+      A drug is administered to a patient at the same time every day. Suppose the concentration of the drug is $C_{n}$ (measured in $\mathrm{mg} / \mathrm{mL}$ ) after the injection on the $n$ th day. Before the injection the next day, only $30 \%$ of the drug remains in the bloodstream and the daily dose raises the concentration by $0.2 \text{ mg} / \mathrm{mL}$.
+      (a) Find the concentration after three days.
+      (b) What is the concentration after the $n$ th dose?
+      (c) What is the limiting concentration?
+    Back: |
+      (a) Just before the daily dose of medication is administered, the concentration is reduced to $30 \%$ of the preceding day's concentration, that is, $0.3 C_{n} .$ With the new dose, the concentration is increased by 0.2 $\text{ mg} / \mathrm{mL}$ and so
+      $$
+      C_{n+1}=0.2+0.3 C_{n}
+      $$ Starting with $C_{0}=0$ and putting $n=0,1,2$ into this equation, we get
+      $$
+      \begin{array}{l}
+      {C_{1}=0.2+0.3 C_{0}=0.2} \\
+      {C_{2}=0.2+0.3 C_{1}=0.2+0.2(0.3)=0.26} \\
+      {C_{3}=0.2+0.3 C_{2}=0.2+0.2(0.3)+0.2(0.3)^{2}=0.278}
+      \end{array}
+      $$ The concentration after three days is $0.278 \text{ mg} / \mathrm{mL}$.
+
+      (b) After the $n$ th dose the concentration is
+      $$
+      C_{n}=0.2+0.2(0.3)+0.2(0.3)^{2}+\cdots+0.2(0.3)^{n-1}
+      $$ This is a finite geometric series with $a=0.2$ and $r=0.3,$ so by Formula 3 we have
+      $$
+      C_{n}=\frac{0.2\left[1-(0.3)^{n}\right]}{1-0.3}=\frac{2}{7}\left[1-(0.3)^{n}\right] \text{ mg} / \mathrm{mL}
+      $$
+
+      (c) Because $0.3<1,$ we know that $\lim _{n \rightarrow \infty}(0.3)^{n}=0 .$ So the limiting concentration is
+      $$
+      \lim _{n \rightarrow \infty} C_{n}=\lim _{n \rightarrow \infty} \frac{2}{7}\left[1-(0.3)^{n}\right]=\frac{2}{7}(1-0)=\frac{2}{7} \text{ mg} / \mathrm{mL}
+      $$
+    Annotations: ''
+  tags: []
+- id: 1578436378136
+  fields:
+    Front: |
+      CET-11.02-06 Example:
+      Write the number $2.3 \overline{17}=2.3171717 . . .$ as a ratio of integers.
+    Back: |
+      $$
+      2.3171717 \ldots=2.3+\frac{17}{10^{3}}+\frac{17}{10^{5}}+\frac{17}{10^{7}}+\cdots
+      $$ After the first term we have a geometric series with $a=17 / 10^{3}$ and $r=1 / 10^{2}$ Therefore
+      $$
+      \begin{aligned}
+      2.3 \overline{17} &=2.3+\frac{\frac{17}{10^{3}}}{1-\frac{1}{10^{2}}}=2.3+\frac{\frac{17}{1000}}{\frac{99}{100}} \\
+      &=\frac{23}{10}+\frac{17}{990}=\frac{1147}{495}
+      \end{aligned}
+      $$
+    Annotations: ''
+  tags: []
+- id: 1578436378402
+  fields:
+    Front: |
+      CET-11.02-07 Example:
+      Find the sum of the series $\sum_{n=0}^{\infty} x^{n},$ where $|x|<1$.
+    Back: |
+      Notice that this series starts with $n=0$ and so the first term is $x^{0}=1$ (With series, we adopt the convention that $x^{0}=1$ even when $x=0 .$) Thus
+      $$
+      \sum_{n=0}^{\infty} x^{n}=1+x+x^{2}+x^{3}+x^{4}+\cdots
+      $$ This is a geometric series with $a=1$ and $r=x .$ since $|r|=|x|<1,$ it converges and
+      $$
+      \sum_{n=0}^{\infty} x^{n}=\frac{1}{1-x}
+      $$
+    Annotations: ''
+  tags: []
+- id: 1578436378661
+  fields:
+    Front: |
+      CET-11.02-08 Example:
+      Show that the series $\sum_{n=1}^{\infty} \frac{1}{n(n+1)}$ is convergent, and find its sum.
+    Back: |
+      This is not a geometric series, so we go back to the definition of a convergent series and compute the partial sums.
+      $$
+      s_{n}=\sum_{i=1}^{n} \frac{1}{i(i+1)}=\frac{1}{1 \cdot 2}+\frac{1}{2 \cdot 3}+\frac{1}{3 \cdot 4}+\cdots+\frac{1}{n(n+1)}
+      $$ We can simplify this expression if we use the partial fraction decomposition
+      $$
+      \frac{1}{i(i+1)}=\frac{1}{i}-\frac{1}{i+1}
+      $$ Thus we have
+      $$
+      \begin{aligned}
+      s_{n} &=\sum_{i=1}^{n} \frac{1}{i(i+1)}=\sum_{i=1}^{n}\left(\frac{1}{i}-\frac{1}{i+1}\right) \\
+      &=\left(1-\frac{1}{2}\right)+\left(\frac{1}{2}-\frac{1}{3}\right)+\left(\frac{1}{3}-\frac{1}{4}\right)+\ldots+\left(\frac{1}{n}-\frac{1}{n+1}\right) \\
+      &=1-\frac{1}{n+1}
+      \end{aligned}
+      $$ and so
+      $$
+      \lim _{n \rightarrow \infty} s_{n}=\lim _{n \rightarrow \infty}\left(1-\frac{1}{n+1}\right)=1-0=1
+      $$ Therefore the given series is convergent and
+      $$
+      \sum_{n=1}^{\infty} \frac{1}{n(n+1)}=1
+      $$
+    Annotations: ''
+  tags: []
+- id: 1578436378910
+  fields:
+    Front: |
+      CET-11.02-09 Example:
+      Show that the harmonic series
+      $$
+      \sum_{n=1}^{\infty} \frac{1}{n}=1+\frac{1}{2}+\frac{1}{3}+\frac{1}{4}+\cdots
+      $$ is divergent.
+    Back: |
+      For this particular series it's convenient to consider the partial sums $s_{2}, s_{4}$, $s_{8}, s_{16}, s_{32}, \ldots$ and show that they become large.
+      $$
+      \begin{aligned}
+      s_{2} &=1+\frac{1}{2} \\
+      s_{4} &=1+\frac{1}{2}+\left(\frac{1}{3}+\frac{1}{4}\right)>1+\frac{1}{2}+\left(\frac{1}{4}+\frac{1}{4}\right)=1+\frac{2}{2} \\
+      s_{8} &=1+\frac{1}{2}+\left(\frac{1}{3}+\frac{1}{4}\right)+\left(\frac{1}{5}+\frac{1}{6}+\frac{1}{7}+\frac{1}{8}\right) \\
+      &>1+\frac{1}{2}+\left(\frac{1}{4}+\frac{1}{4}\right)+\left(\frac{1}{8}+\frac{1}{8}+\frac{1}{8}+\frac{1}{8}\right) \\
+      &=1+\frac{1}{2}+\frac{1}{2}+\frac{1}{2}=1+\frac{3}{8} \\
+      s_{16} &=1+\frac{1}{2}+\left(\frac{1}{3}+\frac{1}{4}\right)+\left(\frac{1}{5}+\cdots+\frac{1}{8}\right)+\left(\frac{1}{9}+\cdots+\frac{1}{16}\right) \\
+      &>1+\frac{1}{2}+\left(\frac{1}{4}+\frac{1}{4}\right)+\left(\frac{1}{8}+\cdots+\frac{1}{8}\right)+\left(\frac{1}{16}+\cdots+\frac{1}{16}\right) \\
+      &=1+\frac{1}{2}+\frac{1}{2}+\frac{1}{2}+\frac{1}{2}=1+\frac{4}{2}
+      \end{aligned}
+      $$ Similarly, $s_{32}>1+\frac{5}{2}, s_{64}>1+\frac{6}{2},$ and in general
+      $$
+      s_{2^{n}}>1+\frac{n}{2}
+      $$ This shows that $s_{2^{n}} \rightarrow \infty$ as $n \rightarrow \infty$ and so $\left\{s_{n}\right\}$ is divergent. Therefore the harmonic series diverges.
+    Annotations: ''
+  tags: []
+- id: 1578436379206
+  fields:
+    Front: |
+      CET-11.02-10 Example:
+      Show that the series $\sum_{n=1}^{\infty} \frac{n^{2}}{5 n^{2}+4}$ diverges.
+    Back: |
+      $$
+      \lim _{n \rightarrow \infty} a_{n}=\lim _{n \rightarrow \infty} \frac{n^{2}}{5 n^{2}+4}=\lim _{n \rightarrow \infty} \frac{1}{5+4 / n^{2}}=\frac{1}{5} \neq 0
+      $$ So the series diverges by the Test for Divergence.
+    Annotations: ''
+  tags: []
+- id: 1578436379451
+  fields:
+    Front: |
+      CET-11.02-11 Example:
+      Find the sum of the series $\sum_{n=1}^{\infty}\left(\frac{3}{n(n+1)}+\frac{1}{2^{n}}\right)$.
+    Back: |
+      The series $\sum 1 / 2^{n}$ is a geometric series with $a=\frac{1}{2}$ and $r=\frac{1}{2},$ so
+      $$
+      \sum_{n=1}^{\infty} \frac{1}{2^{n}}=\frac{\frac{1}{2}}{1-\frac{1}{2}}=1
+      $$ We know that
+      $$
+      \sum_{n=1}^{\infty} \frac{1}{n(n+1)}=1
+      $$ So the given series is convergent and
+      $$
+      \begin{aligned}
+      \sum_{n=1}^{\infty}\left(\frac{3}{n(n+1)}+\frac{1}{2^{n}}\right) &=3 \sum_{n=1}^{\infty} \frac{1}{n(n+1)}+\sum_{n=1}^{\infty} \frac{1}{2^{n}} \\
+      &=3 \cdot 1+1=4
+      \end{aligned}
+      $$
+    Annotations: ''
+  tags: []
