--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -19,8 +19,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Vectors and the Geometry of Space
-      ##### Arc Length and Curvature
-      ###### The Normal and Binormal Vectors
+      ##### Motion in Space: Velocity and Acceleration
+      ###### Tangential and Normal Components of Acceleration
       Define .
     Back: |
       XXX
@@ -39,8 +39,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Vectors and the Geometry of Space
-      ##### Arc Length and Curvature
-      ###### The Normal and Binormal Vectors
+      ##### Motion in Space: Velocity and Acceleration
+      ###### Tangential and Normal Components of Acceleration
       State the . List its hypotheses.
     Back: |
       Hypotheses:
